Changed to oidc.

--- a/demoroot/notebooks/04-1 OpenEO NVDI example.ipynb
+++ b/demoroot/notebooks/04-1 OpenEO NVDI example.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "## NDVI Computation with OpenEO\n",
     "\n",
-    "This notebook demonstrates computing NDVI from Sentinel-2 imagery using the titiler-OpenEO API."
+    "This notebook demonstrates computing NDVI from Sentinel-2 imagery using the OpenEO API with OIDC authentication."
    ]
   },
   {
@@ -16,7 +16,6 @@
    "outputs": [],
    "source": [
     "import requests\n",
-    "import base64\n",
     "import numpy as np\n",
     "import rasterio\n",
     "import matplotlib.pyplot as plt\n",
@@ -27,7 +26,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Configuration"
+    "## Configuration and OIDC Authentication"
    ]
   },
   {
@@ -36,12 +35,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# API endpoints\n",
     "BASE_URL = \"https://eoapi.develop.eoepca.org/openeo/\"\n",
     "STAC_URL = \"https://eoapi.develop.eoepca.org/stac\"\n",
+    "token_endpoint = \"https://iam-auth.develop.eoepca.org/realms/eoepca/protocol/openid-connect/token\"\n",
     "\n",
-    "# Authenticate\n",
-    "auth_header = {\"Authorization\": f\"Basic {base64.b64encode(b'test:test').decode('ascii')}\"}\n",
-    "token = requests.get(f\"{BASE_URL}credentials/basic\", headers=auth_header).json()[\"access_token\"]"
+    "# Get OIDC token\n",
+    "response = requests.post(\n",
+    "    token_endpoint,\n",
+    "    headers={\"Content-Type\": \"application/x-www-form-urlencoded\"},\n",
+    "    data={\n",
+    "        \"grant_type\": \"password\",\n",
+    "        \"username\": \"eric\",\n",
+    "        \"password\": \"changeme\",\n",
+    "        \"client_id\": \"demo\",\n",
+    "        \"client_secret\": \"demo\"\n",
+    "    }\n",
+    ")\n",
+    "response.raise_for_status()\n",
+    "access_token = response.json()[\"access_token\"]\n",
+    "auth_header = {\"Authorization\": f\"Bearer oidc/oidc/{access_token}\"}"
    ]
   },
   {
@@ -59,14 +72,14 @@
    "source": [
     "item = requests.get(f\"{STAC_URL}/collections/sentinel-2-ometepe/items/S2B_16PFT_20250412_0_L2A\").json()\n",
     "bbox = item[\"bbox\"]\n",
-    "preview_url = next((item[\"assets\"][k][\"href\"] for k in [\"thumbnail\", \"preview\", \"visual\"] if k in item[\"assets\"]), item[\"assets\"][\"visual\"][\"href\"])"
+    "preview_url = next((item[\"assets\"][k][\"href\"] for k in [\"thumbnail\", \"preview\", \"visual\"] if k in item[\"assets\"]), None)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Display Preview"
+    "## Display Scene Preview"
    ]
   },
   {
@@ -75,14 +88,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "display(Image(url=preview_url))"
+    "if preview_url:\n",
+    "    display(Image(url=preview_url))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Compute NDVI with OpenEO"
+    "## Compute NDVI with OpenEO\n",
+    "\n",
+    "This process graph:\n",
+    "1. Loads the Sentinel-2 collection (red and NIR bands)\n",
+    "2. Scales values from 0-10000 to 0-1\n",
+    "3. Subtracts 0.1 offset (surface reflectance adjustment)\n",
+    "4. Clamps values to [0,1] range\n",
+    "5. Computes NDVI = (NIR - Red) / (NIR + Red)\n",
+    "6. Saves result as GeoTIFF"
    ]
   },
   {
@@ -91,21 +113,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Compute NDVI with proper Sentinel-2 scaling\n",
-    "# Steps: scale (0-10000 → 0-1), subtract offset (0.1), clamp to [0,1], then compute NDVI\n",
+    "# Build process graph for NDVI computation\n",
     "process_graph = {\n",
     "    \"load1\": {\n",
     "        \"process_id\": \"load_collection\",\n",
     "        \"arguments\": {\n",
     "            \"id\": \"sentinel-2-ometepe\",\n",
-    "            \"spatial_extent\": {\"west\": bbox[0], \"south\": bbox[1], \"east\": bbox[2], \"north\": bbox[3]},\n",
+    "            \"spatial_extent\": {\n",
+    "                \"west\": bbox[0],\n",
+    "                \"south\": bbox[1],\n",
+    "                \"east\": bbox[2],\n",
+    "                \"north\": bbox[3]\n",
+    "            },\n",
     "            \"temporal_extent\": [\"2025-04-12T16:20:21Z\", \"2025-04-12T16:20:22Z\"],\n",
     "            \"bands\": [\"red\", \"nir\"]\n",
     "        }\n",
     "    },\n",
     "    \"red_band\": {\n",
     "        \"process_id\": \"array_element\",\n",
-    "        \"arguments\": {\"data\": {\"from_node\": \"load1\"}, \"index\": 0}\n",
+    "        \"arguments\": {\n",
+    "            \"data\": {\"from_node\": \"load1\"},\n",
+    "            \"index\": 0\n",
+    "        }\n",
     "    },\n",
     "    \"red_scale\": {\n",
     "        \"process_id\": \"linear_scale_range\",\n",
@@ -119,7 +148,10 @@
     "    },\n",
     "    \"red_reflectance\": {\n",
     "        \"process_id\": \"subtract\",\n",
-    "        \"arguments\": {\"x\": {\"from_node\": \"red_scale\"}, \"y\": 0.1}\n",
+    "        \"arguments\": {\n",
+    "            \"x\": {\"from_node\": \"red_scale\"},\n",
+    "            \"y\": 0.1\n",
+    "        }\n",
     "    },\n",
     "    \"red_clamped\": {\n",
     "        \"process_id\": \"clip\",\n",
@@ -131,7 +163,10 @@
     "    },\n",
     "    \"nir_band\": {\n",
     "        \"process_id\": \"array_element\",\n",
-    "        \"arguments\": {\"data\": {\"from_node\": \"load1\"}, \"index\": 1}\n",
+    "        \"arguments\": {\n",
+    "            \"data\": {\"from_node\": \"load1\"},\n",
+    "            \"index\": 1\n",
+    "        }\n",
     "    },\n",
     "    \"nir_scale\": {\n",
     "        \"process_id\": \"linear_scale_range\",\n",
@@ -145,7 +180,10 @@
     "    },\n",
     "    \"nir_reflectance\": {\n",
     "        \"process_id\": \"subtract\",\n",
-    "        \"arguments\": {\"x\": {\"from_node\": \"nir_scale\"}, \"y\": 0.1}\n",
+    "        \"arguments\": {\n",
+    "            \"x\": {\"from_node\": \"nir_scale\"},\n",
+    "            \"y\": 0.1\n",
+    "        }\n",
     "    },\n",
     "    \"nir_clamped\": {\n",
     "        \"process_id\": \"clip\",\n",
@@ -164,7 +202,10 @@
     "    },\n",
     "    \"save1\": {\n",
     "        \"process_id\": \"save_result\",\n",
-    "        \"arguments\": {\"data\": {\"from_node\": \"ndvi\"}, \"format\": \"GTiff\"},\n",
+    "        \"arguments\": {\n",
+    "            \"data\": {\"from_node\": \"ndvi\"},\n",
+    "            \"format\": \"GTiff\"\n",
+    "        },\n",
     "        \"result\": True\n",
     "    }\n",
     "}\n",
@@ -172,13 +213,11 @@
     "result = requests.post(\n",
     "    f\"{BASE_URL}result\",\n",
     "    json={\"process\": {\"process_graph\": process_graph}},\n",
-    "    headers={\"Authorization\": f\"Bearer basic//{token}\"}\n",
+    "    headers=auth_header\n",
     ")\n",
     "result.raise_for_status()\n",
-    "\n",
     "with open(\"ndvi.tif\", \"wb\") as f:\n",
-    "    f.write(result.content)\n",
-    "print(f\"✓ NDVI computed via OpenEO: {len(result.content):,} bytes\")"
+    "    f.write(result.content)"
    ]
   },
   {
@@ -194,22 +233,41 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Read and display the NDVI result\n",
     "with rasterio.open(\"ndvi.tif\") as src:\n",
     "    ndvi_data = src.read(1)\n",
+    "    \n",
+    "    # Filter out NaN values for statistics\n",
     "    valid_data = ndvi_data[~np.isnan(ndvi_data)]\n",
     "    \n",
     "    print(f\"NDVI Statistics:\")\n",
+    "    print(f\"  Shape: {ndvi_data.shape}\")\n",
     "    print(f\"  Min: {valid_data.min():.3f}, Max: {valid_data.max():.3f}\")\n",
     "    print(f\"  Mean: {valid_data.mean():.3f}, Median: {np.median(valid_data):.3f}\")\n",
-    "    print(f\"  Valid pixels: {len(valid_data):,}\")\n",
+    "    print(f\"  Valid pixels: {len(valid_data):,} / {ndvi_data.size:,}\")\n",
     "    \n",
-    "    plt.figure(figsize=(10, 10))\n",
+    "    # Create visualization\n",
+    "    plt.figure(figsize=(12, 10))\n",
     "    im = plt.imshow(ndvi_data, cmap='RdYlGn', vmin=-1, vmax=1)\n",
-    "    plt.title('NDVI Map')\n",
+    "    plt.title('NDVI Map (Sentinel-2)', fontsize=16, fontweight='bold')\n",
     "    plt.axis('off')\n",
-    "    plt.colorbar(im, label='NDVI')\n",
+    "    cbar = plt.colorbar(im, label='NDVI', shrink=0.8)\n",
+    "    cbar.set_label('NDVI', rotation=270, labelpad=20)\n",
     "    plt.tight_layout()\n",
     "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## NDVI Value Interpretation\n",
+    "\n",
+    "- **< 0**: Water, bare soil, or non-vegetated areas\n",
+    "- **0 - 0.2**: Sparse vegetation, desert areas\n",
+    "- **0.2 - 0.4**: Grassland, shrubs, degraded vegetation\n",
+    "- **0.4 - 0.6**: Temperate and tropical forests, crops\n",
+    "- **0.6 - 1.0**: Dense healthy vegetation"
    ]
   }
  ],
