Split into two steps

--- a/demoroot/notebooks/04-1 OpenEO NVDI example.ipynb
+++ b/demoroot/notebooks/04-1 OpenEO NVDI example.ipynb
@@ -96,7 +96,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Compute NDVI with OpenEO\n",
+    "## Compute NDVI with openEO\n",
     "\n",
     "This process graph:\n",
     "1. Loads the Sentinel-2 collection (red and NIR bands)\n",
@@ -208,8 +208,22 @@
     "        },\n",
     "        \"result\": True\n",
     "    }\n",
-    "}\n",
-    "\n",
+    "}\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Execute Process Graph and Save Result to File"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "result = requests.post(\n",
     "    f\"{BASE_URL}result\",\n",
     "    json={\"process\": {\"process_graph\": process_graph}},\n",
@@ -287,7 +301,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.11"
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
