--- a/demoroot/notebooks/06 Resource Registration Harvester.ipynb
+++ b/demoroot/notebooks/06 Resource Registration Harvester.ipynb
@@ -164,10 +164,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "deployment_id = \"d3b1f6dd-1057-11f0-bf7b-da6a9d930b18\"\n",
+    "deployment_id = \"\"\n",
     "url = f\"{flowable_base_url}/service/repository/deployments/{deployment_id}\"\n",
+    "response = flowable_session.get(url)\n",
+    "deployment_name = response.json().get(\"name\")\n",
+    "print(url)\n",
     "response = flowable_session.delete(url)\n",
-    "print(f\"Delete {deployment['name']} Status: {response.status_code}\")"
+    "print(f\"Delete {deployment_name} deployment. Status: {response.status_code}\")"
    ]
   },
   {
@@ -232,6 +235,30 @@
   },
   {
    "cell_type": "markdown",
+   "id": "880ab3d0",
+   "metadata": {},
+   "source": [
+    "Stop (delete) running workflows"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9326cbd6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "process_instance_id = \"\"\n",
+    "url = f\"{flowable_base_url}/service/runtime/process-instances/{process_instance_id}\"\n",
+    "response = flowable_session.get(url)\n",
+    "print(url)\n",
+    "workflow_name = response.json().get(\"processDefinitionName\")\n",
+    "response = flowable_session.delete(url)\n",
+    "print(f\"Deleted {workflow_name} workflow instance {process_instance_id} - status {response.status_code}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "e04d5143",
    "metadata": {},
    "source": [
@@ -259,11 +286,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "query = json.dumps({ \"created\": { \"gte\": \"2024-12-13T15:00:00.000000Z\", \"lt\": \"2024-12-13T16:00:00.000000Z\" } })\n",
+    "#\"2024-11-13T10:00:00Z/2024-11-13T11:00:00Z\"\n",
+    "query = json.dumps({ \"created\": { \"gte\": \"2026-01-22T11:00:00.000000Z\", \"lt\": \"2026-01-22T12:00:00.000000Z\" } })\n",
     "variables = [\n",
     "    # {\"name\": \"datetime_interval\", \"type\": \"string\", \"value\": \"2024-11-12T15:00:00.000000Z/2024-11-12T16:00:00.000000Z\"},    \n",
     "    {\"name\": \"collections\", \"type\": \"string\", \"value\": \"landsat-c2l2-sr\"},\n",
-    "    {\"name\": \"bbox\", \"type\": \"string\", \"value\": \"8,40,18,60\"},\n",
+    "    {\"name\": \"bbox\", \"type\": \"string\", \"value\": \"-7,46,3,52\"},\n",
     "    {\"name\": \"query\", \"type\": \"string\", \"value\": query},\n",
     "]\n",
     "\n",
