--- a/demoroot/notebooks/04-1 OpenEO NVDI example.ipynb
+++ b/demoroot/notebooks/04-1 OpenEO NVDI example.ipynb
@@ -76,6 +76,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bbox"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -209,6 +218,17 @@
     "        \"result\": True\n",
     "    }\n",
     "}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Print process graph for openEO Web Editor\n",
+    "import json\n",
+    "print(json.dumps({\"process_graph\": process_graph}, indent=2))"
    ]
   },
   {
